- Localisation to authetication added - + button in Main and ? in stats added

--- a/LeisurioApp/ru.lproj/Localizable.strings
+++ b/LeisurioApp/ru.lproj/Localizable.strings
@@ -96,3 +96,32 @@
 "Confirm delete" = "Подтверждение";
 "Are you sure you want to delete your account?" = "Вы уверены, что хотите удалить аккаунт?";
 "Delete" = "Удалить";
+"Sign In with Email" = "Вход через Email";
+"Sign Up with Email" = "Регистрация через Email";
+"Password" = "Пароль";
+"Error" = "Ошибка";
+"Sign In" = "Войти";
+"Sign Up" = "Зарегистрироваться";
+"Sign In " = "Авторизация";
+"Sign Up " = "Регистрация";
+"Welcome!" = "Добро пожаловать!";
+"Welcome back!" = "С возвращением!";
+"Sign In with Google" = "Вход через Google";
+"Sign Up with Google" = "Регистрация через Google";
+"Sign In with Apple" = "Вход через Apple";
+"Sign Up with Apple" = "Регистрация через Apple";
+"Don't have an account?" = "Нет аккаунта?";
+"Already have an account?" = "Уже есть аккаунт?";
+"An account with this email already exists!" = "Указанный email уже используется!";
+"No account exists with this email!" = "Пользователь с указанным email не зарегистрирован!";
+"The account does not exist!" = "Нет аккаунта с указанными данными!";
+"The email or password is incorrect!" = "Email или пароль неверны!";
+"An unknown error occurred!" = "Неизвестная ошибка!";
+"Email & password couldn`t be empty!" = "Email и пароль не могут быть пустыми!";
+"Invalid Email address!" = "Некорректный email!";
+"The password should be at least 8 characters!" = "Пароль должен содержать минимум 8 символов!";
+"This email is already in use!" = "Этот email уже используется!";
+"Invalid email format!" = "Неверный формат email!";
+"The user must be re-authenticated to perform this operation." = "Для завершения этой операции требуется повторная авторизация";
+"No events today. Add first one?" = "Сегодня событий нет. Добавить?";
+"Add leisure to the selected period to see the statistics" = "Добавьте отдых в выбранный период, чтобы увидеть статистику";
