- Sign In with Apple added

--- a/LeisurioApp/ru.lproj/Localizable.strings
+++ b/LeisurioApp/ru.lproj/Localizable.strings
@@ -57,7 +57,7 @@
 "Settings" = "Настройки";
 "Update password" = "Обновить пароль";
 "Password updated!" = "Пароль обновлен!";
-"Update email" = "Обновить email";
+"Update email" = "Обновить Email";
 "Email updated!" = "Email изменен!";
 "Email functions" = "Конфиденциальность";
 "Update Username" = "Изменить имя пользователя";
@@ -77,9 +77,9 @@
 "New Username cannot be empty!" = "Новое имя пользователя не может быть пустым!";
 "Password" = "Пароль";
 "Change Username" = "Обновить имя";
-"Change Email" = "Обновить email";
+"Change Email" = "Обновить Email";
 "New Username" = "Новое имя пользователя";
-"New Email" = "Новый email";
+"New Email" = "Новый Email";
 "Email cannot be empty!" = "Email не может быть пустым!";
 "Notification" = "Уведомление";
 "Choose a notification time" = "Выберите время для уведомления";
@@ -112,16 +112,16 @@
 "Sign Up with Apple" = "Регистрация через Apple";
 "Don't have an account?" = "Нет аккаунта?";
 "Already have an account?" = "Уже есть аккаунт?";
-"An account with this email already exists!" = "Указанный email уже используется!";
-"No account exists with this email!" = "Пользователь с указанным email не зарегистрирован!";
+"An account with this email already exists!" = "Указанный Email уже используется!";
+"No account exists with this email!" = "Пользователь с указанным Email не зарегистрирован!";
 "The account does not exist!" = "Нет аккаунта с указанными данными!";
 "The email or password is incorrect!" = "Email или пароль неверны!";
 "An unknown error occurred!" = "Неизвестная ошибка!";
 "Email & password couldn`t be empty!" = "Email и пароль не могут быть пустыми!";
-"Invalid Email address!" = "Некорректный email!";
+"Invalid Email address!" = "Некорректный Email!";
 "The password should be at least 8 characters!" = "Пароль должен содержать минимум 8 символов!";
-"This email is already in use!" = "Этот email уже используется!";
-"Invalid email format!" = "Неверный формат email!";
+"This email is already in use!" = "Этот Email уже используется!";
+"Invalid email format!" = "Неверный формат Email!";
 "The user must be re-authenticated to perform this operation." = "Для завершения этой операции требуется повторная авторизация";
 "No events today. Add first one?" = "Сегодня событий нет. Добавить?";
 "Add leisure to the selected period to see the statistics" = "Добавьте отдых в выбранный период, чтобы увидеть статистику";
