--- a/LeisurioApp/en.lproj/Localizable.strings
+++ b/LeisurioApp/en.lproj/Localizable.strings
@@ -6,15 +6,15 @@
 "Другое" = "Other";
 "Не забудьте про тип отдыха!" = "Don't forget about the type of rest!";
 "Нужен разнообразный отдых" = "Need a varied rest";
-"Ваши отдыхи пересекаются" = "Your rests overlap";
+"Ваши активности пересекаются" = "Your rests overlap";
 "Длинный отдых" = "Long rest";
 "Отличное равномерное распределение времени отдыха!" = "Excellent uniform distribution of rest time!";
 "Нужно более равномерное распределение времени отдыха" = "Need more uniform distribution of rest time";
 "Ваши оценки в среднем ухудшаются после отдыха" = "Your ratings are getting worse on average after rest";
 "Вы уже более 5 дней не выбирали %@!" = "You haven't chosen %@ for more than 5 days!";
 "В последние пять дней вы отдыхали только одним способом. Попробуйте что-то новое!" = "In the last five days, you have rested in only one way. Try something new!";
-"Некоторые из ваших отдыхов пересекаются по времени. Попробуйте уделить внимание планированию своего времени." = "Some of your rests overlap in time. Try to pay attention to planning your time.";
-"Один из ваших отдыхов длиннее 12 часов. Постарайтесь разбивать длинные активности на более мелкие." = "One of your rests lasts longer than 12 hours. Try to break down long activities into smaller ones.";
+"Некоторые из ваших активностей пересекаются по времени. Попробуйте уделить внимание планированию своего времени." = "Some of your rests overlap in time. Try to pay attention to planning your time.";
+"Один из ваших активностей длиннее 12 часов. Постарайтесь разбивать длинные активности на более мелкие." = "One of your rests lasts longer than 12 hours. Try to break down long activities into smaller ones.";
 "Ваше время отдыха равномерно распределено по разным видам активности. Продолжайте в том же духе!" = "Your rest time is evenly distributed among different types of activity. Keep it up!";
 "Попробуйте распределить свое время отдыха более равномерно между разными видами активности." = "Try to distribute your rest time more evenly among different types of activity.";
 "Обратите внимание, что ваши оценки самочувствия ухудшаются после отдыха. Попробуйте изменить вид отдыха или его продолжительность." = "Note that your well-being ratings are getting worse after rest. Try changing the type of rest or its duration.";
